WebGPUGen/Evergine.Bindings.WebGPU/Generated/Commands.cs


		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuRenderPassEncoderWriteTimestamp")]
		public static extern void wgpuRenderPassEncoderWriteTimestamp(WGPURenderPassEncoder renderPassEncoder, WGPUQuerySet querySet, uint queryIndex);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuRenderPassEncoderReference")]
		public static extern void wgpuRenderPassEncoderReference(WGPURenderPassEncoder renderPassEncoder);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuRenderPassEncoderRelease")]
		public static extern void wgpuRenderPassEncoderRelease(WGPURenderPassEncoder renderPassEncoder);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuRenderPipelineGetBindGroupLayout")]
		public static extern WGPUBindGroupLayout wgpuRenderPipelineGetBindGroupLayout(WGPURenderPipeline renderPipeline, uint groupIndex);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuRenderPipelineSetLabel")]
		public static extern void wgpuRenderPipelineSetLabel(WGPURenderPipeline renderPipeline, char* label);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuRenderPipelineReference")]
		public static extern void wgpuRenderPipelineReference(WGPURenderPipeline renderPipeline);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuRenderPipelineRelease")]
		public static extern void wgpuRenderPipelineRelease(WGPURenderPipeline renderPipeline);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSamplerSetLabel")]
		public static extern void wgpuSamplerSetLabel(WGPUSampler sampler, char* label);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSamplerReference")]
		public static extern void wgpuSamplerReference(WGPUSampler sampler);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSamplerRelease")]
		public static extern void wgpuSamplerRelease(WGPUSampler sampler);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuShaderModuleGetCompilationInfo")]
		public static extern void wgpuShaderModuleGetCompilationInfo(WGPUShaderModule shaderModule, delegate* unmanaged<WGPUCompilationInfoRequestStatus, WGPUCompilationInfo*, void*, void> callback, void* userdata);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuShaderModuleSetLabel")]
		public static extern void wgpuShaderModuleSetLabel(WGPUShaderModule shaderModule, char* label);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuShaderModuleReference")]
		public static extern void wgpuShaderModuleReference(WGPUShaderModule shaderModule);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuShaderModuleRelease")]
		public static extern void wgpuShaderModuleRelease(WGPUShaderModule shaderModule);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSurfaceGetPreferredFormat")]
		public static extern WGPUTextureFormat wgpuSurfaceGetPreferredFormat(WGPUSurface surface, WGPUAdapter adapter);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSurfaceReference")]
		public static extern void wgpuSurfaceReference(WGPUSurface surface);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSurfaceRelease")]
		public static extern void wgpuSurfaceRelease(WGPUSurface surface);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSwapChainGetCurrentTextureView")]
		public static extern WGPUTextureView wgpuSwapChainGetCurrentTextureView(WGPUSwapChain swapChain);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSwapChainPresent")]
		public static extern void wgpuSwapChainPresent(WGPUSwapChain swapChain);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSwapChainReference")]
		public static extern void wgpuSwapChainReference(WGPUSwapChain swapChain);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuSwapChainRelease")]
		public static extern void wgpuSwapChainRelease(WGPUSwapChain swapChain);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureCreateView")]
		public static extern WGPUTextureView wgpuTextureCreateView(WGPUTexture texture, WGPUTextureViewDescriptor* descriptor);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureDestroy")]
		public static extern void wgpuTextureDestroy(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetDepthOrArrayLayers")]
		public static extern uint wgpuTextureGetDepthOrArrayLayers(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetDimension")]
		public static extern WGPUTextureDimension wgpuTextureGetDimension(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetFormat")]
		public static extern WGPUTextureFormat wgpuTextureGetFormat(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetHeight")]
		public static extern uint wgpuTextureGetHeight(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetMipLevelCount")]
		public static extern uint wgpuTextureGetMipLevelCount(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetSampleCount")]
		public static extern uint wgpuTextureGetSampleCount(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetUsage")]
		public static extern WGPUTextureUsage wgpuTextureGetUsage(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureGetWidth")]
		public static extern uint wgpuTextureGetWidth(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureSetLabel")]
		public static extern void wgpuTextureSetLabel(WGPUTexture texture, char* label);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureReference")]
		public static extern void wgpuTextureReference(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureRelease")]
		public static extern void wgpuTextureRelease(WGPUTexture texture);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureViewSetLabel")]
		public static extern void wgpuTextureViewSetLabel(WGPUTextureView textureView, char* label);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureViewReference")]
		public static extern void wgpuTextureViewReference(WGPUTextureView textureView);

		[DllImport("wgpu_native", CallingConvention = CallingConvention.Cdecl, EntryPoint = "wgpuTextureViewRelease")]
		public static extern void wgpuTextureViewRelease(WGPUTextureView textureView);
	}
}
